reduce graph height on smaller screens; make sure the graph's background image fits in the graph; change the graph legend to one column and move it out of the way of the newest data

--- a/octoprint/static/css/octoprint.less
+++ b/octoprint/static/css/octoprint.less
@@ -1,6 +1,6 @@
 /** Top bar */
 
-@media screen and (min-width: 980px)
+@media (min-width: 980px)
 {
 	body {
 	  padding-top: 60px;
@@ -178,6 +178,13 @@ table {
   background-image: url("/static/img/graph-background.png");
   background-position: center;
   background-repeat: no-repeat;
+}
+
+@media (max-width: 480px) {
+	#temperature-graph {
+		height: 200px;
+		background-size: 45%;
+	}
 }
 
 .tab-content, .tab-pane {
